--- a/.github/workflows/rebar-testing.yml
+++ b/.github/workflows/rebar-testing.yml
@@ -24,4 +24,4 @@ jobs:
       run: rebar3 lfe compile
    
     - name: Run Tests
-      run: rebar3 as test eunit
+      run:  rebar3 as test lfe ltest 
