--- a/rebar.config
+++ b/rebar.config
@@ -1,13 +1,15 @@
-{erl_opts, [debug_info]}.
-
+{erl_opts, [{src_dirs, ["src", "test"]}]}.
+   
 {deps, [
     {lfe, "2.1.2"},
-    {ltest, "0.13.5"}, 
-    {barista, "0.3.4"} 
+    {ltest, "0.13.5"},
+    {barista, "0.3.4"},
+    {proper, "1.4.0"}
 ]}.
 
 {plugins, [
-    {rebar3_lfe, "0.4.8"}
+    {rebar3_lfe, "0.4.8"},
+    {rebar3_proper, "0.12.1"}
 ]}.
 
 {lfe, [
