--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,9 @@
     {lfe, "2.1.2"},
     {ltest, "0.13.5"},
     {barista, "0.3.4"},
+    {lanes, "0.3.3"},
     {proper, "1.4.0"}
+  
 ]}.
 
 {plugins, [
