Add run instructions.

--- a/rebar.config
+++ b/rebar.config
@@ -5,6 +5,7 @@
     {ltest, "0.13.5"},
     {barista, "0.3.4"},
     {lanes, "0.3.3"},
+    {lanes_barista, "0.3.3"}, 
     {proper, "1.4.0"}
   
 ]}.
