--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,4 +21,4 @@ jobs:
     - name: Check rebar3 Version
       run: DEBUG=1 rebar3 --version
     - name: Compile
-      run: rebar3 lfe compile
+      run:  rebar3 do compile, lfe compile
