First attempt at using lanes, ouch that was a lot of time.

--- a/rebar.config
+++ b/rebar.config
@@ -1,13 +1,13 @@
 {erl_opts, [{src_dirs, ["src", "test"]}]}.
-   
+
 {deps, [
     {lfe, "2.1.2"},
     {ltest, "0.13.5"},
-    {barista, "0.3.4"},
-    {lanes, "0.3.3"},
-    {lanes_barista, "0.3.3"}, 
+    {barista, "0.3.2"},
+    {logjam, "1.2.2"},
+    {lanes, "0.3.0-rc4"},
+    {lanes_barista, "0.3.0-rc4"},
     {proper, "1.4.0"}
-  
 ]}.
 
 {plugins, [
